src/main/resources/static/css/custom.css
/* Affect elements */

* {
    margin: 0;
    padding: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* border: 0;*/
    /* outline: 0;*/
    /* font-size: 100%;*/
    /* vertical-align: baseline;*/
}

button, input[type="submit"], input[type="reset"] {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
}

input[type="text"], input[type="password"], input[type="email"]{
    border: 1px solid #ccc;
    border-radius: 3px;
    padding: 5px;
    margin: 5px 0;
}

input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus{
    outline: none;
    border: 1px solid #aaa;
    box-shadow: 0 0 5px #aaa;
}

a {
    text-decoration: none;
    font-weight: 600;
    color: #DC2626;
}

a:focus{
    color: #DC2626;
}

a:hover {
    text-decoration: underline;
    color: #EF4444;
}

html {
    background-color: #F9FAFB;
}

/*
    custom classes
*/

/* Body */

.content-container {
    display: flex;
    flex-direction: column;
}

.content {
    /* margin-top: 3%; */
    /* margin-right: 18%;
    margin-left: 18%; */
    width: 70%;
    margin: 3rem auto;
    display: flex;
    flex-grow: 1;
}

.main-body {
    background-color: #ffffff;
    border-radius: 15px;
    /* width: 70%; */
    flex-grow: 1;
    min-width: 0;
    height: min-content;
    margin-right: 2rem;
    display: inline-block;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
}

.side-body-container{
    width: 28%;
    min-width: 230px;
    display: flex;
    flex-direction: column;
}

.side-body {
    width: 100%;
    background-color: #ffffff;
    border-radius: 15px;
    display: inline-block;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
}

.inside-main-body {
    padding: 1rem;
    word-wrap: break-word;
}

.slight-margin {
    margin-top: 2%;
}

.side-body-info-text {
    font-size: 12px;
}

/* footer */
.footer {
    width: 100%;
    background-color: #374151;
}

.footer-text {
    color: #dadada;
}

.footer .container{
    width: 70%;
    margin: 0 auto;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

/* header */
.header {
    width: 100%;
    background-color: rgb(226, 226, 226);
}

.align-right {
    position: relative;
    float: right;
    padding-right: 10px;
}

.align-left {
    padding-left: 10px;
}

.align-centre {
    text-align: center;
}

.header-body {
    /* padding-left: 15%; */
    width: 70%;
    margin: 0 auto;
    padding-bottom: 3px;
    padding-top: 3px;
}

/* plugins list */

.plugin-box {
    clear: both;
    overflow: hidden;
    margin-top: 5px;
    margin-bottom: 5px;
    display: flex;
    position: relative;
}

.plugin-list {
    /* padding: 3% 7%; */
    list-style-type: none;
}

.logo {
    width: 65px;
    height: 65px;
    border-radius: 7px;
    margin: 1px;
    display: flex;
    align-items: center;
}

.info-left:nth-child(2){
    flex-grow: 1;
    flex-basis: 100px;
    position: relative;
    min-width: 0;
    width: auto;
}

.info-right{
    margin-left: 1rem;
}

.blurb {
    font-size: 13px;
}

.title {
    font-size: 16px;
    color: #DC2626;
    font-weight: bold;
    word-wrap: break-word;
}

/* more */

.text-box {
    width: 100%;
    height: 500px;
    overflow: auto;
    resize: none;
}

.page-button {
    height: 20px;
    width: 20px;
    color: #DC2626;
}

.horizontal-center {
    display: flex;
    justify-content: center;
}

